# fidelio-loyalty-agent

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
config/: agent.example.json
include/fidelio/agent/app/: AgentApp.hpp  AgentConfig.hpp
include/fidelio/agent/components/: ComponentManager.hpp
include/fidelio/agent/integrity/: IntegrityChecker.hpp
include/fidelio/agent/license/: LicenseManager.hpp
include/fidelio/agent/logging/: Logger.hpp
include/fidelio/agent/platform/: ProcessSupervisor.hpp  ServiceController.hpp  WindowsService.hpp
include/fidelio/agent/state/: StateManager.hpp
include/fidelio/agent/update/: UpdateManager.hpp
scripts/unix/: build.sh  dev.sh  test.sh
scripts/windows/: build.ps1  dev.ps1  test.ps1
src/: main.cpp
src/app/: AgentApp.cpp  AgentConfig.cpp
src/components/: ComponentManager.cpp
src/integrity/: IntegrityChecker.cpp
src/license/: LicenseManager.cpp
src/logging/: Logger.cpp
src/platform/: ProcessSupervisor.cpp  ServiceController.cpp  WindowsService.cpp
src/state/: StateManager.cpp
src/update/: UpdateManager.cpp
tests/: state_manager_smoke.cpp
